--- a/schoolApp/src/main/res/layout/goodread_tab_button.xml
+++ b/schoolApp/src/main/res/layout/goodread_tab_button.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
     android:orientation="horizontal" >
 
     <com.champs21.schoolapp.viewhelpers.CustomButton
