1. Keyboeard related bug solved at SpellingbeeTestActivity.java. 2. Made SpellingbeeTestActivity.java as a full screen activity. 3. Added color cursor to submit text at SpellingbeeTestActivity.java.

--- a/schoolApp/src/main/res/layout/activity_spelling_demo.xml
+++ b/schoolApp/src/main/res/layout/activity_spelling_demo.xml
@@ -233,6 +233,8 @@
                         android:layout_toLeftOf="@+id/btnEnter"
                         android:inputType="textFilter|textCapCharacters"
                         android:layout_alignParentLeft="true"
+                        android:background="@android:color/transparent"
+                        android:textCursorDrawable="@drawable/color_cursor"
                         android:layout_alignParentStart="true" />
                 </RelativeLayout>
 
