--- a/schoolApp/src/main/res/layout/activity_spellingbee_result_page.xml
+++ b/schoolApp/src/main/res/layout/activity_spellingbee_result_page.xml
@@ -8,6 +8,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/btnLeaderBoard"
         android:layout_marginTop="90dp">
 
         <LinearLayout
@@ -272,12 +273,13 @@
 
     </ScrollView>
 
-
-
-
-
-
-
+    <Button
+        android:id="@+id/btnLeaderBoard"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Leaderboard"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
