--- a/schoolApp/src/main/res/layout/row_spellingbee_leaderboard.xml
+++ b/schoolApp/src/main/res/layout/row_spellingbee_leaderboard.xml
@@ -20,7 +20,6 @@
                 android:id="@+id/txtPosition"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="10."
                 android:textColor="#ffd200"
                 android:textSize="18sp"
                 android:layout_marginRight="4dp"
@@ -30,7 +29,6 @@
                 android:id="@+id/txtName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Narendra Modi"
                 android:textColor="#ffd200"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -41,8 +39,14 @@
             android:id="@+id/txtSchoolName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:text="Zilla School" />
+            android:textColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/txtHighScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white" />
+
     </LinearLayout>
 
 </LinearLayout>
