--- a/schoolApp/src/main/res/layout/spellingbee_leaderboard_activity.xml
+++ b/schoolApp/src/main/res/layout/spellingbee_leaderboard_activity.xml
@@ -54,6 +54,11 @@
                     android:id="@+id/txtSchoolName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit ="marquee_forever"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
                     android:textColor="#717273" />
                 <TextView
                     android:id="@+id/txtDivisionUpper"
